--- a/style.css
+++ b/style.css
@@ -239,13 +239,13 @@ footer{
 
 @media (max-width: 600px){
     .inicioo {
-        margin-left: 6%;
-        margin-right: auto;
+        margin-left: 0%;
+        margin-right: 0;
         padding-bottom: 3%;
         padding-top: 3%;
         display: flex;
-        width: 400px;
-        height: 310px;
+        width: 100%;
+        height: 50%;
     }
     }
-}
+
